# Test

./: Animation.cpp  Animation.h  CMakeLists.txt  Player.cpp  Player.h  README.md  main.cpp
cmake_modules/: FindSFML.cmake
